--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-<p style="text-align:center,color:blue;"> Centered: Hello World! </p>
+<p style="margin:auto;"> Centered: Hello World! </p>
 </body>
 </html>
