--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-<body>
-<p style="margin:auto;"> Centered: Hello World! </p>
-</body>
+	<body>
+		<div style="text-align: center;">
+			<h1> Centered: Hello World! </h1>
+		</div>
+	</body>
 </html>
