--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<body>
-		<div style="text-align: center;">
-			<h1> Centered: Hello World! </h1>
+		<div >
+			<h1 style="text-align: center;"> Centered: Hello World! </h1>
 		</div>
 	</body>
 </html>
