--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<body>
 		<div >
-			<h1 style="text-align: center;"> Centered: Hello World! </h1>
+			<h1 style="text-align: center;color: blue;"> Centered: Hello World! </h1>
 		</div>
 	</body>
 </html>
