--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+	<title>
+		JJ
+	</title>
 	<body>
 		<div >
 			<h1 style="text-align: center;color: blue;"> Centered: Blue: Hello World! </h1>
