--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	</title>
 	<body>
 		<div >
-			<h1 style="text-align: center;color: violet;"> Centered: Blue: Hello World! </h1>
+			<h1 style="text-align: center;color: grey;"> Centered: Blue: Hello World! </h1>
 		</div>
 	</body>
 </html>
