--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<body>
 		<div >
 			<h1 style="text-align: center;color: grey;"> Centered: Blue: Hello World! </h1>
+			<h2 style="text-align: center;">This is a second paragraph.</h2>
 		</div>
 	</body>
 </html>
