--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 		JJ
 	</title>
 	<body>
-		<div >
+		<div>
 			<h1 style="text-align: center;color: grey;"> Centered: Blue: Hello World! </h1>
-			<h1 style="text-align: center;">This is a second paragraph.</h1>
+			<blink><h1 style="text-align: center;">This is a second paragraph.</h1></blink>
 		</div>
 	</body>
 </html>
