--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
-	<title>
-		JJ
-	</title>
+	<head>
+		<title>
+			JJ
+		</title>
+	</head>
 	<body>
 		<div>
 			<h1 style="text-align: center;color: grey;"> Centered: Blue: Hello World! </h1>
