--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 			<h1 style="text-align: center;color: grey;"> Centered: Blue: Hello World! </h1>
 			<blink><h1 style="text-align: center;">This is a second paragraph.</h1></blink>
 		</div>
+		this is some text
 	</body>
 </html>
