--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 			<blink><h1 style="text-align: center;">This is a second paragraph.</h1></blink>
 		</div>
 		this is some text
+		<button onclick="function(alert('you clicked a button!'))">Click me!</button>
 	</body>
 </html>
