--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			<h1 style="text-align: center;color: grey;"> Centered: Blue: Hello World! </h1>
 			<blink><h1 style="text-align: center;">This is a second paragraph.</h1></blink>
 		</div>
-		this is some text
+		this is some text part 2
 		<button onclick="function(alert('you clicked a button!'))">Click me!</button>
 	</body>
 </html>
