fixed js part 2

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 			<blink><h1 style="text-align: center;">This is a second paragraph.</h1></blink>
 		</div>
 		this is some text part 2
-		<button onclick="function(){alert('you clicked a button!');return false;}">Click me!</button>
+		<button onclick="(function(){alert('you clicked a button!');return false;})();return false;">Click me!</button>
 	</body>
 </html>
