--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 		<title>
 			JJ
 		</title>
+		<meta charset="utf-8" />
+		<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="keywords" content="HTML">
 	</head>
 	<body>
 		<div>
