--- a/index.html
+++ b/index.html
@@ -7,14 +7,88 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=2" />
-		<meta name="keywords" content="HTML">
+		<meta name="keywords" content="HTML" />
+
+		<style>
+			body{font-family:Arial, Helvetica, sans-serif};
+			.tab
+			{
+				overflow: hidden;
+				border: 1px solid #ccc;
+				background-color: #f1f1f1;
+			}
+
+			.tab button
+			{
+				background-color: inherit;
+				float: left;
+				border: none;
+				cursor: pointer;
+				padding: 14px 16px;
+				transition: 0.3s;
+				font-size: 17px;
+			}
+
+			.tab button.active
+			{
+				background-color: #ccc;
+			}
+
+			.tab button:hover
+			{
+				background-color: #ddd;
+			}
+
+			.tabcontent
+			{
+				display: none;
+				padding: 6px 12px;
+				border: 1px solid #ccc;
+				border-top: none;
+			}
+		</style>
 	</head>
 	<body>
-		<div>
+		<div class="tab">
+			<button class="tablinks" onclick="openTab(event, 'class1')">Class 1</button>
+			<button class="tablinks" onclick="openTab(event, 'class2')">Class 2</button>
+		</div>
+
+		<div id="class1" class="tabcontent">
 			<h1 style="text-align: center;color: grey;"> Centered: Blue: Hello World! </h1>
 			<blink><h1 style="text-align: center;">This is a second paragraph.</h1></blink>
+			<button onclick="(function(){alert('you clicked a button!');return false;})();return false;">Click me!</button>
+			this is some text part 2
 		</div>
-		this is some text part 2
-		<button onclick="(function(){alert('you clicked a button!');return false;})();return false;">Click me!</button>
+		
+		<div id="class2" class="tabcontent">
+			Class 2!
+		</div>
+
+		<script>
+		function openTab(evt,tabName)
+		{
+			var i, tabcontent, tablinks;
+
+			tabcontent = document.getElementsByClassName("tabcontent");
+
+			for(i=0;i<tabcontent.length;i++)
+			{
+				tabcontent[i].style.display = "none";
+			}
+
+			tablinks = document.getElementsByClassName("tablinks");
+
+			for(i=o;i<tablinks.length;i++)
+			{
+				tablinks[i].className = tablinks[i].className.replace(" active","");
+			}
+
+			document.getElementById(tabName).style.display = "block";
+			evt.currentTarget.className += " active";
+
+		}
+		</script>
+		
 	</body>
 </html>
