--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			{
 				overflow: hidden;
 				border: 1px solid #ccc;
-				background-color: #f1f1f1;
+				background-color: #666666;
 			}
 
 			.tab button
