--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
 		{
 			var i, tabcontent, tablinks;
 
+			alert(tabName);
+
 			tabcontent = document.getElementsByClassName("tabcontent");
 
 			for(i=0;i<tabcontent.length;i++)
