2nd debug alert

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 			var i, tabcontent, tablinks;
 
 			alert(tabName);
+			alert(event.currentTarget.className);
 
 			tabcontent = document.getElementsByClassName("tabcontent");
 
