--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 			tablinks = document.getElementsByClassName("tablinks");
 
-			for(i=o;i<tablinks.length;i++)
+			for(i=0;i<tablinks.length;i++)
 			{
 				tablinks[i].className = tablinks[i].className.replace(" active","");
 			}
