--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 			.tab
 			{
 				overflow: hidden;
+				width: 100%;
 				border: 1px solid #ccc;
 				background-color: #666666;
 			}
@@ -54,8 +55,6 @@
 			<button class="tablinks" onclick="openTab(event, 'class2')">Class 2</button>
 		</div>
 
-		<br><br>
-		
 		<div id="class1" class="tabcontent">
 			<h1 style="text-align: center;color: grey;"> Centered: Blue: Hello World! </h1>
 			<blink><h1 style="text-align: center;">This is a second paragraph.</h1></blink>
