--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			.tab
 			{
 				overflow: hidden;
-				width: 100%;
+				min-width: 380px;
 				border: 1px solid #ccc;
 				background-color: #666666;
 			}
