--- a/index.html
+++ b/index.html
@@ -55,17 +55,39 @@
 			<button class="tablinks" onclick="openTab(event, 'class2')">Class 2</button>
 		</div>
 
-		<br><br><br>
-		
+		<br><br>
+
 		<div id="class1" class="tabcontent">
-			<h1 style="text-align: center;color: grey;"> Centered: Blue: Hello World! </h1>
-			<blink><h1 style="text-align: center;">This is a second paragraph.</h1></blink>
-			<button onclick="(function(){alert('you clicked a button!');return false;})();return false;">Click me!</button>
-			this is some text part 2
+			<div>
+				<h1 style="text-align: center;color: grey;"> Centered: Blue: Hello World! </h1>
+				<blink><h1 style="text-align: center;">This is a second paragraph.</h1></blink>
+				<button onclick="(function(){alert('you clicked a button!');return false;})();return false;">Click me!</button>
+				this is some text part 2
+			</div>
 		</div>
 		
 		<div id="class2" class="tabcontent">
-			<p>Class 2!</p>
+			<h1>Universities in Toronto</h1>
+			<br>
+			<h2>Ryerson University</h2>
+			<img src="https://www.ryerson.ca/content/dam/about/images/optimized/ryerson-university-campus-quad.jpg" alt="Aerial view of the Ryerson campus" />
+
+			<br>
+			<details>
+					<summary><h3>Location</h3></summary>
+					<p>350 Victoria Street</p>
+					<p>Toronto, ON</p>
+					<p>M5B 2K3</p>
+			</details>
+
+			<details>
+				<summary><h3>Students</h3></summary>
+				<p>32,302 undergrad students (2017/18)</p>
+				<p>2,187 graduate students (2017/18)</p>
+			</details>
+
+			
+			
 		</div>
 
 		<script>
