--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
 				<p>2,187 graduate students (2017/18)</p>
 			</details>
 
-			
+			<!--embedded video-->
+			<iframe width="720" height="406" src="https://www.youtube.com/embed/vJnpw5Bz6zM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			
 		</div>
 
