removed h3 from locations

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 			<br>
 			<details>
-					<summary><h3>Location</h3></summary>
+					<summary>Location</summary>
 					<p>350 Victoria Street</p>
 					<p>Toronto, ON</p>
 					<p>M5B 2K3</p>
