--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
 
 			<br>
 			<details>
-					<summary>Location</summary>
+					<summary><b>Location</b></summary>
 					<p>350 Victoria Street</p>
 					<p>Toronto, ON</p>
 					<p>M5B 2K3</p>
 			</details>
 
 			<details>
-				<summary><h3>Students</h3></summary>
+				<summary><b>Students</b></summary>
 				<p>32,302 undergrad students (2017/18)</p>
 				<p>2,187 graduate students (2017/18)</p>
 			</details>
