--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 			body{font-family:Arial, Helvetica, sans-serif};
 			.tab
 			{
-				overflow: hidden;
+				
 				min-width: 380px;
-				border: 1px solid #ccc;
+				border: 1px solid #00ff00;
 				background-color: #666666;
+				padding: 14px 16px;
 			}
 
 			.tab button
@@ -55,7 +56,7 @@
 			<button class="tablinks" onclick="openTab(event, 'class2')">Class 2</button>
 		</div>
 
-		
+		<br><br>
 
 		<div id="class1" class="tabcontent">
 			<div>
@@ -93,28 +94,28 @@
 		</div>
 
 		<script>
-		function openTab(evt,tabName)
-		{
-			var i, tabcontent, tablinks;
-
-			tabcontent = document.getElementsByClassName("tabcontent");
-
-			for(i=0;i<tabcontent.length;i++)
+			function openTab(evt,tabName)
 			{
-				tabcontent[i].style.display = "none";
+				var i, tabcontent, tablinks;
+
+				tabcontent = document.getElementsByClassName("tabcontent");
+
+				for(i=0;i<tabcontent.length;i++)
+				{
+					tabcontent[i].style.display = "none";
+				}
+
+				tablinks = document.getElementsByClassName("tablinks");
+
+				for(i=0;i<tablinks.length;i++)
+				{
+					tablinks[i].className = tablinks[i].className.replace(" active","");
+				}
+
+				document.getElementById(tabName).style.display = "block";
+				evt.currentTarget.className += " active";
+
 			}
-
-			tablinks = document.getElementsByClassName("tablinks");
-
-			for(i=0;i<tablinks.length;i++)
-			{
-				tablinks[i].className = tablinks[i].className.replace(" active","");
-			}
-
-			document.getElementById(tabName).style.display = "block";
-			evt.currentTarget.className += " active";
-
-		}
 		</script>
 		
 	</body>
