removed inline style

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		</style>
 	</head>
 	<body>
-		<div class="tab"  style="overflow: hidden">
+		<div class="tab">
 			<button class="tablinks" onclick="openTab(event, 'class1')">Class 1</button>
 			<button class="tablinks" onclick="openTab(event, 'class2')">Class 2</button>
 		</div>
