--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
 			.tab
 			{
 				overflow: hidden;
-				border: 1px solid #00ff00;
-				background-color: #666666;
-			}
+				border: 1px solid #cccccc;
+				background-color: #f1f1f1			}
 
 			.tab button
 			{
