added Class 3 tab

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 		<div class="tab">
 			<button class="tablinks" onclick="openTab(event, 'class1')">Class 1</button>
 			<button class="tablinks" onclick="openTab(event, 'class2')">Class 2</button>
+			<button class="tablinks" onclick="openTab(event, 'class3')">Class 3</button>
 		</div>
 
 		<div id="class1" class="tabcontent">
@@ -85,6 +86,10 @@
 			<!--embedded video-->
 			<iframe width="720" height="406" src="https://www.youtube.com/embed/vJnpw5Bz6zM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			
+		</div>
+
+		<div id="class3" class="tabcontent">
+			Class 3!
 		</div>
 
 		<script>
