--- a/index.html
+++ b/index.html
@@ -9,42 +9,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=2" />
 		<meta name="keywords" content="HTML" />
 
-		<style>
-			.tab
-			{
-				overflow: hidden;
-				border: 1px solid #cccccc;
-				background-color: #f1f1f1			}
-
-			.tab button
-			{
-				background-color: inherit;
-				float: left;
-				border: none;
-				cursor: pointer;
-				padding: 14px 16px;
-				transition: 0.3s;
-				font-size: 17px;
-			}
-
-			.tab button.active
-			{
-				background-color: #ccc;
-			}
-
-			.tab button:hover
-			{
-				background-color: #ddd;
-			}
-
-			.tabcontent
-			{
-				display: none;
-				padding: 6px 12px;
-				border: 1px solid #ccc;
-				border-top: none;
-			}
-		</style>
+		<link rel="stylesheet" type="text/css" href="jstyle.css">
 	</head>
 	<body>
 		<div class="tab">
