--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta name="keywords" content="HTML" />
 
 		<link rel="stylesheet" type="text/css" href="jstyle.css">
+		<script src="jscript.js"></script>
 	</head>
 	<body>
 		<div class="tab">
@@ -55,32 +56,6 @@
 
 		<div id="class3" class="tabcontent">
 			<p>Class 3!</p>
-		</div>
-
-		<script>
-			function openTab(evt,tabName)
-			{
-				var i, tabcontent, tablinks;
-
-				tabcontent = document.getElementsByClassName("tabcontent");
-
-				for(i=0;i<tabcontent.length;i++)
-				{
-					tabcontent[i].style.display = "none";
-				}
-
-				tablinks = document.getElementsByClassName("tablinks");
-
-				for(i=0;i<tablinks.length;i++)
-				{
-					tablinks[i].className = tablinks[i].className.replace(" active","");
-				}
-
-				document.getElementById(tabName).style.display = "block";
-				evt.currentTarget.className += " active";
-
-			}
-		</script>
-		
+		</div>		
 	</body>
 </html>
