--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
 		</div>
 
 		<div id="class3" class="tabcontent">
-			<p>Class 3!</p>
+			<div class="center">
+				<p>Class 3!</p>
+			</div>
 		</div>		
 	</body>
 </html>
