fixed spelling of centre

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		</div>
 
 		<div id="class3" class="tabcontent">
-			<div class="center">
+			<div class="centre">
 				<p>Class 3!</p>
 			</div>
 		</div>		
