--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div id="class1" class="tabcontent">
 			<div>
 				<h1 style="text-align: center;color: grey;"> Centered: Blue: Hello World! </h1>
-				<blink><h1 style="text-align: center;">This is a second paragraph.</h1></blink>
+				<h1 style="text-align: center;">This is a second paragraph.</h1>
 				<button onclick="(function(){alert('you clicked a button!');return false;})();return false;">Click me!</button>
 				this is some text part 2
 			</div>
