added class 4 tab

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 			<button class="tablinks" onclick="openTab(event, 'class1')">Class 1</button>
 			<button class="tablinks" onclick="openTab(event, 'class2')">Class 2</button>
 			<button class="tablinks" onclick="openTab(event, 'class3')">Class 3</button>
+			<button class="tablinks" onclick="openTab(event, 'class4')">Class 4</button>
 		</div>
 
 		<div id="class1" class="tabcontent">
@@ -97,7 +98,13 @@
 				<img class="fly" src="Images/fly.png" alt="an image of a fly">
 
 			</div>
-		</div>		
+		</div>	
+		
+		<div class="class4">
+			<div>
+				<h5>Playing around</h5>
+			</div>
+		</div>
 	</body>
 </html>
 <!-- test worked! -->
