fixed class 4 tab

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			</div>
 		</div>	
 		
-		<div class="class4">
+		<div id="class4" class="tabcontent">
 			<div>
 				<h5>Playing around</h5>
 			</div>
