added frame to c4 div

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 		</div>	
 		
 		<div id="class4" class="tabcontent">
-			<div>
+			<div class="frame">
 				<h5>Playing around</h5>
 			</div>
 		</div>
