added php iframe

--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
 			<div class="frame">
 				<h5>Playing around</h5>
 			</div>
+			<div class="frame">
+				<iframe src="jeremypaquette.com/php.php"></iframe>
+			</div>
 		</div>
 	</body>
 </html>
