--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 				<h5>Playing around</h5>
 			</div>
 			<div class="frame">
-				<iframe src="jeremypaquette.com/php.php"></iframe>
+				<iframe src="http://jeremypaquette.com/php.php"></iframe>
 			</div>
 		</div>
 	</body>
