tried inline style in PHP response

--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 			<div class="frame">
 				<h5>Playing around</h5>
 			</div>
-			<div class="frame">
-				<iframe src="http://jeremypaquette.com/php.php"></iframe>
+			<div class="np frame">
+				<iframe class="nb" src="http://jeremypaquette.com/php.php"></iframe>
 			</div>
 		</div>
 	</body>
