added overflox:visible to iFrame parent div

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 			<div class="frame">
 				<h5>Playing around</h5>
 			</div>
-			<div class="np frame">
+			<div style="overflow:visible" class="np frame">
 				<iframe class="nb" src="http://jeremypaquette.com/php.php"></iframe>
 			</div>
 		</div>
