--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 				<h5>Playing around</h5>
 			</div>
 			<div style="overflow:visible" class="np frame">
-				<iframe style="width:100%" class="nb" src="http://jeremypaquette.com/php.php">Your browser does not support iframes.</iframe>
+				<iframe style="width:100%" class="nb center" src="http://jeremypaquette.com/php.php">Your browser does not support iframes.</iframe>
 			</div>
 		</div>
 	</body>
