--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 			<div class="frame">
 				<h5>Playing around</h5>
 			</div>
-			<div style="overflow:visible" class="np frame">
-				<iframe style="width:100%" class="nb center" src="http://jeremypaquette.com/php.php">Your browser does not support iframes.</iframe>
+			<div style="overflow:visible;padding:0px;" class="np frame">
+				<iframe style="width:100%;margin:0px;" class="nb center" src="http://jeremypaquette.com/php.php">Your browser does not support iframes.</iframe>
 			</div>
 		</div>
 	</body>
