added form submit

--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
 			<div style="overflow:visible;padding:0px;" class="np frame">
 				<iframe style="width:100%;margin:0px;" class="nb center" src="https://jeremypaquette.com/php.php">Your browser does not support iframes.</iframe>
 			</div>
+			<form action="https://jeremypaquette.com/php.php" method="POST">
+				Name: <input type="text" name="name">
+			</form>
 		</div>
 	</body>
 </html>
