Added form submission with JS function call and iFrame target

--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
 				<h5>Playing around</h5>
 			</div>
 			<div style="overflow:visible;padding:0px;" class="np frame">
-				<iframe style="width:100%;margin:0px;" class="nb center" src="https://jeremypaquette.com/php.php">Your browser does not support iframes.</iframe>
+				<iframe id="jpaquette_iframe" style="width:100%;margin:0px;" class="nb center" src="https://jeremypaquette.com/php.php">Your browser does not support iframes.</iframe>
 			</div>
-			<form action="https://jeremypaquette.com/php.php" method="POST">
+			<form action="https://jeremypaquette.com/php.php" method="POST" onsubmit="submitForm()" target="jpaquette_iframe">
 				Name: <input type="text" name="name">
 			</form>
 		</div>
