floating form and response frame left

--- a/index.html
+++ b/index.html
@@ -105,11 +105,12 @@
 				<h5>Playing around</h5>
 			</div>
 			<div style="overflow:visible;padding:0px;" class="np frame">
-				<iframe name="jpaquette_iframe" style="width:100%;margin:0px;" class="nb center" src="https://jeremypaquette.com/php.php">Your browser does not support iframes.</iframe>
+				<form class="float_left" action="https://jeremypaquette.com/php.php" method="POST" onsubmit="submitForm()" target="jpaquette_iframe">
+					Name: <input type="text" name="name">
+				</form>
+				<iframe name="jpaquette_iframe" id="form_response_frame" src="https://jeremypaquette.com/php.php">Your browser does not support iframes.</iframe>
 			</div>
-			<form action="https://jeremypaquette.com/php.php" method="POST" onsubmit="submitForm()" target="jpaquette_iframe">
-				Name: <input type="text" name="name">
-			</form>
+			
 		</div>
 	</body>
 </html>
