removed iframe border

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 				<form class="float_left" action="https://jeremypaquette.com/php.php" method="POST" onsubmit="submitForm()" target="jpaquette_iframe">
 					Name: <input type="text" name="name">
 				</form>
-				<iframe name="jpaquette_iframe" id="form_response_frame" src="https://jeremypaquette.com/php.php">Your browser does not support iframes.</iframe>
+				<iframe name="jpaquette_iframe" id="form_response_frame" class="nb" src="https://jeremypaquette.com/php.php">Your browser does not support iframes.</iframe>
 			</div>
 			
 		</div>
