--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
 			</div>
 			<div style="overflow:hidden;" class="frame">
 				<form id="c4_name_form" action="https://jeremypaquette.com/php.php" method="POST" onsubmit="submitForm()" target="jpaquette_iframe">
-					Name: <input type="text" name="name"><br><br>
+					Name: <input id="c4_form_input_name" type="text" name="name"><br><br>
 					<div class="centre">
 						<button style="margin:auto;" onclick="submitForm()">Submit!</button>
 					</div>
 				</form>
 				<div id="c4_form_preview">
-					<p id="c4_form_preview_title">Test</p>
+					<p id="c4_form_preview_title"></p>
 					<br>
 					<p id="c4_form_preview_name"></p>
 					<br>
