added php login script

--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
 			</div>
 			<div style="overflow:hidden;" class="frame">
 				<form id="c4_name_form" action="https://jeremypaquette.com/php.php" method="POST" onsubmit="submitForm()" target="jpaquette_iframe">
-					Name: <input id="c4_form_input_name" type="text" name="name"><br><br>
+					Name: <input id="c4_form_input_name" type="text" name="name"><br>
+					Password: <input id="c4_form_input_password" type="password" name="password"><br><br>
 					<div class="centre">
 						<button style="margin:auto;" onclick="submitForm()">Submit!</button>
 					</div>
