Removed inline style, added overflow:hidden back to .frame

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 			<div class="frame">
 				<h5>Playing around</h5>
 			</div>
-			<div style="overflow:hidden;" class="frame">
+			<divclass="frame">
 				<form id="c4_name_form" action="https://jeremypaquette.com/php.php" method="POST" onsubmit="submitForm()" target="jpaquette_iframe">
 					Name: <input id="c4_form_input_name" type="text" name="name"><br>
 					Password: <input id="c4_form_input_password" type="password" name="password"><br><br>
