Added Assignment 1 section

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			<button class="tablinks" onclick="openTab(event, 'class2')">Class 2</button>
 			<button class="tablinks" onclick="openTab(event, 'class3')">Class 3</button>
 			<button class="tablinks" onclick="openTab(event, 'class4')">Class 4</button>
+			<button class="tablinks" onclick="openTab(event, 'assignment-1')">Assignment 1</button>
 		</div>
 
 		<div id="class1" class="tabcontent">
@@ -104,7 +105,7 @@
 			<div class="frame">
 				<h5>Playing around</h5>
 			</div>
-			<divclass="frame">
+			<div class="frame">
 				<form id="c4_name_form" action="https://jeremypaquette.com/php.php" method="POST" onsubmit="submitForm()" target="jpaquette_iframe">
 					Name: <input id="c4_form_input_name" type="text" name="name"><br>
 					Password: <input id="c4_form_input_password" type="password" name="password"><br><br>
@@ -123,6 +124,11 @@
 				<iframe name="jpaquette_iframe" id="form_response_frame" class="nb" src="https://jeremypaquette.com/php.php">Your browser does not support iframes.</iframe>
 			</div>
 			
+		</div>
+
+		<div id="assignment-1" class="tabcontent">
+
+
 		</div>
 	</body>
 </html>
