--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			<button class="tablinks" onclick="openTab(event, 'class2')">Class 2</button>
 			<button class="tablinks" onclick="openTab(event, 'class3')">Class 3</button>
 			<button class="tablinks" onclick="openTab(event, 'class4')">Class 4</button>
+			<button class="tablinks" onclick="openTab(event, 'class5')">Class 5</button>
 		</div>
 
 		<div id="class1" class="tabcontent">
@@ -123,6 +124,10 @@
 				<iframe name="jpaquette_iframe" id="form_response_frame" class="nb" src="https://jeremypaquette.com/php.php">Your browser does not support iframes.</iframe>
 			</div>
 			
+		</div>
+
+		<div id="class5" class="tabcontent">
+			Class 5
 		</div>
 	</body>
 </html>
