added class 5 input and results frame

--- a/index.html
+++ b/index.html
@@ -128,6 +128,12 @@
 
 		<div id="class5" class="tabcontent">
 			Class 5
+			<div class="frame">
+				<form id="c5-python-editor" action="https://jeremypaquette.com/class5.php" method="POST" target="c5-python-results">
+					<input id="c5-python-input" type="text" />
+				</form>
+				<iframe name="c5-python-results" id="c5-python-results">Your browser does not support iframes.</iframe>
+			</div>
 		</div>
 	</body>
 </html>
