--- a/index.html
+++ b/index.html
@@ -130,8 +130,9 @@
 			Class 5
 			<div class="frame">
 				<form id="c5-python-editor" action="https://jeremypaquette.com/class5.php" method="POST" target="c5-python-results">
-					<input id="c5-python-input" type="textarea" />
+					
 				</form>
+				<textarea id="c5-python-input" form="c5-python-editor"></textarea>
 				<iframe name="c5-python-results" id="c5-python-results">Your browser does not support iframes.</iframe>
 			</div>
 		</div>
