--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 			<button class="tablinks" onclick="openTab(event, 'class3')">Class 3</button>
 			<button class="tablinks" onclick="openTab(event, 'class4')">Class 4</button>
 			<button class="tablinks" onclick="openTab(event, 'class5')">Class 5</button>
+			<button class="tablinks" onclick="openTab(event, 'class6')">Class 6</button>
 		</div>
 
 		<div id="class1" class="tabcontent">
@@ -143,6 +144,26 @@
 				<iframe name="c5-python-results" id="c5-python-results">Your browser does not support iframes.</iframe>
 			</div>
 			<button id="cta-button">Find a place today!</button>
+		</div>
+
+		<div id="class6" class="tabcontent">
+			Class 6
+			<div class="frame">
+				Some content
+
+			</div>
+			<div class="quiz-wrapper">
+				<div class="quiz-question">
+					Question 1
+				</div>
+				<div class="quiz-question">
+					Question 2
+				</div>
+				<div class="quiz-question">
+					This is some more text <br> underneath the first.
+
+				</div>
+			</div>			
 		</div>
 	</body>
 </html>
