--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			<button class="tablinks" onclick="openTab(event, 'class4')">Class 4</button>
 			<button class="tablinks" onclick="openTab(event, 'class5')">Class 5</button>
 			<button class="tablinks" onclick="openTab(event, 'class6')">Class 6</button>
+			<button class="tablinks" onclick="openTab(event, 'class7')">Class 7</button>
 		</div>
 
 		<div id="class1" class="tabcontent">
@@ -164,6 +165,9 @@
 
 				</div>
 			</div>			
+		</div>
+		<div id="class7" class="tabcontent">
+			Class 7!
 		</div>
 	</body>
 </html>
